// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordReset /> Component should match component snapshot 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "paddingTop": "150px",
      }
    }
  >
    <h3
      className="center"
    >
      Event Manager
    </h3>
    <div
      className="card loginCard"
      style={
        Object {
          "width": "30rem",
        }
      }
    >
      <div
        className="card-header"
      >
        <h3>
          Password Reset
        </h3>
      </div>
      <div
        className="card-body"
      >
        <div
          className="cont card-body"
        >
          <form
            className="centerform"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="2"
              >
                New Password
              </label>
              <input
                className="form-control form-control-lg"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                required={true}
                type="password"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="2"
              >
                Password
              </label>
              <input
                className="form-control form-control-lg"
                name="confirmPassword"
                onChange={[Function]}
                placeholder="confirm Password"
                required={true}
                type="password"
                value=""
              />
            </div>
            <div
              className="text-center"
            >
              <button
                className="btn btn-outline-dark"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordReset /> Component should render initial layout of PasswordReset 1`] = `
Array [
  <div>
    <div
      className="container"
      style={
        Object {
          "paddingTop": "150px",
        }
      }
    >
      <h3
        className="center"
      >
        Event Manager
      </h3>
      <div
        className="card loginCard"
        style={
          Object {
            "width": "30rem",
          }
        }
      >
        <div
          className="card-header"
        >
          <h3>
            Password Reset
          </h3>
        </div>
        <div
          className="card-body"
        >
          <div
            className="cont card-body"
          >
            <form
              className="centerform"
              onSubmit={[Function]}
            >
              <TextField
                label="New Password"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
              <TextField
                label="Password"
                name="confirmPassword"
                onChange={[Function]}
                placeholder="confirm Password"
                type="password"
                value=""
              />
              <div
                className="text-center"
              >
                <button
                  className="btn btn-outline-dark"
                  type="submit"
                >
                  Submit
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
